stream Type suport